# registry-rs

./: Cargo.toml
examples/: bench.rs  example.rs
src/: commands.rs  component.rs  component_storage.rs  components.rs  components_storage.rs  entities.rs  entity.rs  entity_id.rs  facade.rs  from_world.rs  id.rs  lib.rs  main.rs  query.rs  registry.rs  resource.rs  resource_storage.rs  singleton.rs  singleton_storage.rs  storage.rs  view.rs  world.rs
