[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
slotmap = { version = "1.0.6", features = ["serde"] }
uuid = {version = "1.3.0", features = ["serde"] }
fxhash = "0.2.1"